--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,30 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+   
+
+  <ion-split-pane contentId="main">
+    <!--  the side menu  -->
+    <ion-menu contentId="main">
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Menu</ion-title>
+        </ion-toolbar>
+      </ion-header>
+<ion-content>
+  <ion-menu-toggle autoHide=false>
+    <ion-item Button=true detail=true [routerLink]="['/set-productos']">
+     <ion-label class="normal">Configuracion de productos</ion-label>
+     <ion-icon slot="start" name="create"></ion-icon>
+    </ion-item>
+  </ion-menu-toggle>
+
+
+</ion-content>
+    </ion-menu>
+  
+    <!-- the main content -->
+    <ion-router-outlet id="main"></ion-router-outlet>
+  </ion-split-pane>
+
+
+
 </ion-app>
