--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,41 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,400;1,100;1,500&display=swap');
+
+.titulo{
+    font-family: 'Raleway', sans-serif;    
+    font-size: 27px;
+    font-weight: bold;
+    color: #001350;
+    //text-align: center;
+    
+
+}
+.subtitulo{
+    font-family: 'Raleway', sans-serif !important ;    
+    font-size: 19px !important;
+    font-weight: bold !important;
+}
+.normal{
+    font-family: 'Raleway', sans-serif !important;    
+    font-size: 14px !important;
+    color: black !important;
+}
+.encabezado{
+    background: #e9ecef;
+    border-radius: 30px;
+   margin: 5%;
+    text-align: center;
+    padding: 10px;
+     
+}
+.image{
+
+padding: 10px;
+border: 1px solid #e9ecef;
+width: 100%;
+border-radius: 20px;
+margin: auto;
+}
