--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
   <ion-split-pane contentId="main">
     <!--  the side menu  -->
-    <ion-menu contentId="main">
+    <ion-menu contentId="main" menuId="principal">
       <ion-header>
         <ion-toolbar>
           <ion-title>Menu</ion-title>
