--- a/src/app/componentes/itemcarrito/itemcarrito.component.html
+++ b/src/app/componentes/itemcarrito/itemcarrito.component.html
@@ -1,6 +1,32 @@
-<p>
-  {{productoPedido.producto.nombre}}
-</p>
-<p>
-  {{productoPedido.cantidad}}
-</p>
+<ion-card>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6">
+        <ion-img [src]="productoPedido.producto.foto"></ion-img>
+        
+      </ion-col>
+
+      <ion-col size="6">
+        <ion-item>
+          <ion-label class="subtitle ion-text-wrap">{{productoPedido.producto.nombre}}</ion-label>
+        </ion-item> 
+        <div> 
+                       
+          <p class="normal normal m-3" >Precio: {{productoPedido.producto.precioReducido}}</p>
+          <p class="normal normal m-3">Cantidad: {{productoPedido.cantidad}}</p>        
+      </div>           
+      </ion-col>
+    </ion-row>    
+          
+            <div>
+              <ion-button color="secondary"(click)="addCarrito()">
+                <ion-icon slot="icon-only" name="add" ></ion-icon>
+              </ion-button>
+      
+              <ion-button color="danger" (click)="removeCarrito()">
+                <ion-icon  slot="icon-only" name="remove" ></ion-icon>
+              </ion-button>
+            </div>              
+           
+  </ion-grid>
+</ion-card>
