--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
   <ion-menu-toggle autoHide=false>
     <ion-item Button=true detail=true [routerLink]="['/']">
      <ion-label class="normal">Tienda</ion-label>
-     <ion-icon slot="start" name="create"></ion-icon>
+     <ion-icon slot="start" name="storefront-outline"></ion-icon>
     </ion-item>
   </ion-menu-toggle>
 
@@ -22,6 +22,13 @@
     <ion-item Button=true detail=true [routerLink]="['/carrito']">
      <ion-label class="normal">Carrito</ion-label>
      <ion-icon slot="start" name="cart-outline"></ion-icon>
+    </ion-item>
+  </ion-menu-toggle>
+
+  <ion-menu-toggle autoHide=false>
+    <ion-item Button=true detail=true [routerLink]="['/mis-pedidos']">
+     <ion-label class="normal">Mis Pedidos</ion-label>
+     <ion-icon slot="start" name="receipt-outline"></ion-icon>
     </ion-item>
   </ion-menu-toggle>
 
