--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,11 +35,11 @@
   <ion-menu-toggle autoHide=false>
     <ion-item Button=true detail=true [routerLink]="['/set-productos']">
      <ion-label class="normal">Configuracion de productos</ion-label>
-     <ion-icon slot="start" name="create"></ion-icon>
+     <ion-icon slot="start" name="construct-outline"></ion-icon>
     </ion-item>
   </ion-menu-toggle>
 
-
+ 
 </ion-content>
     </ion-menu>
   
