--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,14 +32,37 @@
     </ion-item>
   </ion-menu-toggle>
 
-  <ion-menu-toggle autoHide=false>
+  <ion-menu-toggle autoHide=false *ngIf="!admin">
+    <ion-item Button=true detail=true [routerLink]="['/set-productos']">
+     <ion-label class="normal">Mis  productos</ion-label>
+     <ion-icon slot="start" name="file-tray-full-outline"></ion-icon>
+    </ion-item>
+  </ion-menu-toggle>
+  
+
+  <ion-menu-toggle autoHide=false *ngIf="admin">
     <ion-item Button=true detail=true [routerLink]="['/set-productos']">
      <ion-label class="normal">Configuracion de productos</ion-label>
      <ion-icon slot="start" name="construct-outline"></ion-icon>
     </ion-item>
   </ion-menu-toggle>
 
+  <ion-menu-toggle autoHide=false>
+    <ion-item Button=true detail=true [routerLink]="['/perfil']">
+     <ion-label class="normal">Todos los Pedidos</ion-label>
+     <ion-icon slot="start" name="library-outline"></ion-icon>
+    </ion-item>
+  </ion-menu-toggle>
+  
+
+  <ion-menu-toggle autoHide=false *ngIf="admin">
+    <ion-item Button=true detail=true [routerLink]="['/perfil']">
+     <ion-label class="normal">Resgistro</ion-label>
+     <ion-icon slot="start" name="person-add-outline"></ion-icon>
+    </ion-item>
+  </ion-menu-toggle>
  
+
 </ion-content>
     </ion-menu>
   
