--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,7 +55,7 @@
   </ion-menu-toggle>
   
 
-  <ion-menu-toggle autoHide=false *ngIf="admin">
+  <ion-menu-toggle autoHide=false >
     <ion-item Button=true detail=true [routerLink]="['/perfil']">
      <ion-label class="normal">Resgistro</ion-label>
      <ion-icon slot="start" name="person-add-outline"></ion-icon>
