--- a/src/app/pages/carrito/carrito.component.html
+++ b/src/app/pages/carrito/carrito.component.html
@@ -2,7 +2,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title class="subtitle" style="text-align: center;">
-        COMPRA VENTA PRODUCTOS 
+        Compras
     </ion-title>
 
     <ion-buttons slot="start">
