--- a/src/app/pages/pedidos/pedidos.component.html
+++ b/src/app/pages/pedidos/pedidos.component.html
@@ -1,3 +1,47 @@
-<p>
-  pedidos works!
-</p>
+
+
+<ion-header>
+  <ion-toolbar>
+    <ion-title class="subtitulo">
+       Pedidos
+    </ion-title>
+
+    <ion-buttons slot="start">
+      <ion-button (click)="openMenu()">
+        <ion-icon color="primary" slot="icon-only" name="menu"></ion-icon>
+      </ion-button>
+    </ion-buttons></ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <div class="m-2">
+    <ion-segment mode="ios"  (ionChange)="changeSegmet($event)" value="nuevos">
+      <ion-segment-button value="nuevos">
+        <ion-label class="normal">Nuevos</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="entregados">
+        <ion-label class="normal">Entregados</ion-label>
+      </ion-segment-button>
+    </ion-segment>
+  </div>
+
+
+  <ion-card *ngFor="let pedido of pedidos" style="border: solid;">
+    <ion-item>
+      <ion-label class="normal">
+        Estado: {{pedido.estado}}
+        <p>
+          Fecha: {{pedido.fecha.seconds|date}}
+        </p>
+      </ion-label>
+    </ion-item>
+ 
+  <app-itemcarrito *ngFor="let producto of pedido.productos" [productoPedido]="producto" [botones]=false>
+  </app-itemcarrito>
+  
+ 
+
+ </ion-card>
+
+
+</ion-content>
