--- a/src/app/componentes/itemcarrito/itemcarrito.component.html
+++ b/src/app/componentes/itemcarrito/itemcarrito.component.html
@@ -20,9 +20,9 @@
     </ion-row>    
           
             <div *ngIf="botones">
-              <ion-button color="secondary"(click)="addCarrito()">
+              <!-- <ion-button color="secondary"(click)="addCarrito()">
                 <ion-icon slot="icon-only" name="add" ></ion-icon>
-              </ion-button>
+              </ion-button> -->
       
               <ion-button color="danger" (click)="removeCarrito()">
                 <ion-icon  slot="icon-only" name="remove" ></ion-icon>
