--- a/src/app/backend/set-productos/set-productos.component.html
+++ b/src/app/backend/set-productos/set-productos.component.html
@@ -5,7 +5,7 @@
     </ion-title>
 
     <ion-buttons slot="start">
-      <ion-button (click)="openMenu()">
+      <ion-button (click)="openMenu(); ngOnDestroy()">
         <ion-icon color="primary" slot="icon-only" name="menu"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -15,7 +15,7 @@
 <ion-content>
 <div >
 
-  <div style="margin: 10px; float: left;">
+  <div style="margin: 10px; float: left;" *ngIf="boton">
     <ion-button (click)="nuevo()" class="normal" color="secondary">
       Nuevo
     </ion-button>
