--- a/src/app/pages/mispedidos/mispedidos.component.html
+++ b/src/app/pages/mispedidos/mispedidos.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title class="subtitulo">
-        Mis Pedidos
+        Compras
     </ion-title>
 
     <ion-buttons slot="start">
@@ -45,7 +45,7 @@
       <ion-label class="normal">
         Estado: {{pedido.estado}}
         <p>
-          Fecha: {{pedido.fecha.seconds|date}}
+          Fecha: {{pedido.fecha.seconds*1000 | date}}
         </p>
       </ion-label>
     </ion-item>
