--- a/src/app/componentes/itemcarrito/itemcarrito.component.scss
+++ b/src/app/componentes/itemcarrito/itemcarrito.component.scss
@@ -1,10 +1,26 @@
-p {
-    margin: 10%;
-    border: solid 1px;
-    padding: 5px;
+
+
+.mapa{
+    text-align: center;
+    
+}
+hr{
+    margin: 0px;
    
 }
-div{
-    display: block;
-    text-align: -webkit-center;
+p{
+    margin: 0%;
+    font-weight:bold ;
+}
+.columna{
+   
+    border: solid 1px;
+}
+.icon-producto{
+    position: absolute;
+    top:0px;
+    right: 0px;
+    margin: 5px;
+    
+
 }
