--- a/src/app/pages/perfil/perfil.component.scss
+++ b/src/app/pages/perfil/perfil.component.scss
@@ -5,3 +5,10 @@
     width: 200px;
     height: 200px;
 }
+
+.new-background-color{
+    --background: #00A19D;
+}
+.datos{
+    background-color: #EEEEEE;
+}
