--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,26 @@
 <ion-app>
    
 
-  <ion-split-pane contentId="main">
+  <ion-split-pane contentId="main" >
     <!--  the side menu  -->
-    <ion-menu contentId="main" menuId="principal">
+    <ion-menu contentId="main" menuId="principal"  >
       <ion-header>
-        <ion-toolbar>
+        <ion-toolbar class="new-background-color">
           <ion-title>Menu</ion-title>
         </ion-toolbar>
       </ion-header>
-<ion-content>
+    <ion-content>
 
-  <ion-menu-toggle autoHide=false>
-    <ion-item Button=true detail=true [routerLink]="['/']">
-     <ion-label class="normal">Tienda</ion-label>
-     <ion-icon slot="start" name="storefront-outline"></ion-icon>
-    </ion-item>
-  </ion-menu-toggle>
+    <ion-menu-toggle autoHide=false>
+      <ion-item Button=true detail=true [routerLink]="['/']">
+      <ion-label class="normal">Propiedades</ion-label>
+      <ion-icon slot="start" name="storefront-outline"></ion-icon>
+      </ion-item>
+    </ion-menu-toggle>
 
   <ion-menu-toggle autoHide=false *ngIf="!admin">
     <ion-item Button=true detail=true [routerLink]="['/carrito']">
-     <ion-label class="normal">Carrito</ion-label>
+     <ion-label class="normal">Informacion </ion-label>
      <ion-icon slot="start" name="cart-outline"></ion-icon>
     </ion-item>
   </ion-menu-toggle>
@@ -34,7 +34,7 @@
 
   <ion-menu-toggle autoHide=false *ngIf="!admin">
     <ion-item Button=true detail=true [routerLink]="['/set-productos']">
-     <ion-label class="normal">Mis  productos</ion-label>
+     <ion-label class="normal">Mis  Publicaciones</ion-label>
      <ion-icon slot="start" name="file-tray-full-outline"></ion-icon>
     </ion-item>
   </ion-menu-toggle>
@@ -63,12 +63,13 @@
   </ion-menu-toggle>
  
 
-</ion-content>
-    </ion-menu>
+    </ion-content>
+
+  </ion-menu>
   
     <!-- the main content -->
-    <ion-router-outlet id="main"></ion-router-outlet>
-  </ion-split-pane>
+      <ion-router-outlet id="main"></ion-router-outlet>
+</ion-split-pane>
 
 
 
