--- a/src/app/componentes/producto/producto.component.scss
+++ b/src/app/componentes/producto/producto.component.scss
@@ -2,8 +2,9 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
+    border: solid 3px gray;
 }
 .tachado{
     text-align: center;
@@ -17,7 +18,7 @@
 .precio{
     text-align: center;
     margin: 5px;
-    color: rgb(183, 0, 255);    
+    color: rgb(0, 17, 255);    
     font-size: 20px;
     font-family: "Raleway","sans-serif";
 }
