--- a/src/app/pages/carrito/carrito.component.html
+++ b/src/app/pages/carrito/carrito.component.html
@@ -26,32 +26,28 @@
 </ion-header>
 
 <ion-content>
-  <div *ngFor="let producto of pedido.productos">
+  <div *ngFor="let producto of propiedad.productos">
     <app-itemcarrito [productoPedido]='producto'></app-itemcarrito>
   </div>
 </ion-content>
 
-<ion-footer>
+<!-- <ion-footer>
 
   <ion-grid>
     <ion-row class="ion-justify-content-center">
-      <ion-col class="normal text-center" size="6" style="border-right: 1px solid silver;">
-        Cantidad: {{cantidad}}
-      </ion-col>
-      
-        <ion-col class="normal text-center"size="6">
-          Total:{{total}}$
-        </ion-col>
-      
+        <ion-col class="normal text-start">
+          Preciol:{{propiedad.cliente}}$
+        </ion-col>  
+
     </ion-row>
     <ion-row>
       <ion-col>
         <ion-button (click)="pedir()" expand="full" class="normal" style="color: white !important;">
-          Pedir
+          Comprar
         </ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
-  </ion-footer>
+  </ion-footer> -->
 
  
