--- a/src/app/googlemaps/googlemaps.component.html
+++ b/src/app/googlemaps/googlemaps.component.html
@@ -12,7 +12,7 @@
 </ion-header>
 
 <ion-content>
-  <div #mapa class="map"></div>
+  <div #map id="map" class="map"></div>
   <ion-chip class="miubicacion" (click)="mylocation()">
     <ion-label>mi ubicacion acttual</ion-label>
     <ion-icon name="locate"></ion-icon>>
