--- a/src/app/googlemaps/googlemaps.component.scss
+++ b/src/app/googlemaps/googlemaps.component.scss
@@ -6,13 +6,13 @@
 .miubicacion{
     position: fixed;
     bottom: 0px;
-    background: green;
+    background: rgb(251, 255, 33);
 }
 .aceptar{
     position: fixed;
     top: 50px;
     right: 5px;
-    background: yellow;
+    background: rgb(21, 252, 0);
 }
 .search{
     position: fixed;
