--- a/src/app/componentes/itemcarrito/itemcarrito.component.html
+++ b/src/app/componentes/itemcarrito/itemcarrito.component.html
@@ -8,7 +8,7 @@
     <hr>    
     <p class="normal">Contacto: {{productoPedido.producto.telefono}}</p>  <br>
     <hr>       
-    <p class="normal">Precio: {{productoPedido.producto.precio}}</p><br>
+    <p class="normal">Precio: ${{productoPedido.producto.precio}}</p><br>
     <hr>  
   </ion-col>
   <ion-col size="6"class="columna">
@@ -16,7 +16,7 @@
     <hr>  
     <p  class="normal ub">Ubicacion: {{productoPedido.producto.ubicacion}}</p> <br> 
    <p class="mapa"> 
-     <ion-button><ion-icon slot="icon-only" name="navigate-circle-outline"></ion-icon></ion-button>  </p>
+     <ion-button (click)="verubicacion()"><ion-icon slot="icon-only" name="navigate-circle-outline"></ion-icon></ion-button>  </p>
   </ion-col>
 </ion-row>
       
