--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
   <ion-menu-toggle autoHide=false *ngIf="!admin">
     <ion-item Button=true detail=true [routerLink]="['/carrito']">
      <ion-label class="normal">Informacion </ion-label>
-     <ion-icon slot="start" name="cart-outline"></ion-icon>
+     <ion-icon slot="start" name="help-circle-outline"></ion-icon>
     </ion-item>
   </ion-menu-toggle>
 
