--- a/src/app/componentes/itemcarrito/itemcarrito.component.html
+++ b/src/app/componentes/itemcarrito/itemcarrito.component.html
@@ -1,6 +1,8 @@
 <ion-card>
   <ion-grid>
-    <ion-img [src]="productoPedido.producto.foto" class="center"></ion-img>   
+    <div>
+      <ion-img [src]="productoPedido.producto.foto" class="center"></ion-img>   
+    </div>
     <p>Informacion</p>    
 <ion-row>
   <ion-col size="6" class="columna">
@@ -21,12 +23,12 @@
 </ion-row>
       
           <hr>
-
             <div class="text-center icon-producto" *ngIf="botones">     
               <ion-button color="danger" (click)="removeCarrito()">
                 <ion-icon  slot="icon-only" name="close-outline" ></ion-icon>
               </ion-button>              
-            </div>              
+            </div>     
+                     
            
   </ion-grid>
 </ion-card>
