--- a/src/app/componentes/itemcarrito/itemcarrito.component.scss
+++ b/src/app/componentes/itemcarrito/itemcarrito.component.scss
@@ -21,6 +21,18 @@ p{
     top:0px;
     right: 0px;
     margin: 5px;
-    
-
+}
+.icon-producto2{
+    position: absolute;
+    top:0px;
+    right: 60px;
+    margin: 5px;
+}
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 80%;
+    height: 80%;
+    border: solid 3px gray;
 }
