--- a/src/app/componentes/producto/producto.component.scss
+++ b/src/app/componentes/producto/producto.component.scss
@@ -2,8 +2,8 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
-    width: 400px;
-    height: 300px;
+    width: 70%;
+    height: 70%;
     border: solid 3px gray;
 }
 .tachado{
