--- a/src/app/pages/mispedidos/mispedidos.component.html
+++ b/src/app/pages/mispedidos/mispedidos.component.html
@@ -34,7 +34,7 @@
         <ion-label class="normal">Nuevos</ion-label>
       </ion-segment-button>
       <ion-segment-button value="entregados">
-        <ion-label class="normal">Entregados</ion-label>
+        <ion-label class="normal">Comprados</ion-label>
       </ion-segment-button>
     </ion-segment>
   </div>
